--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
+    <form action="">
+        <input type="text" placeholder="nombre...">
+        <input type="date">
 
+    </form>
 </body>
 
 </html>
