--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
 </head>
 
 <body>
-    <form action="">
+    <form>
+        <label for="">Nombre</label>
         <input type="text" placeholder="nombre...">
         <input type="date">
-
+        <label for="">Email</label>
+        <input type="email" placeholder="email...">
+        <input type="color">
+        <input type="password">
+        <input type="search">
+        <input type="time">
+        <select>
+            <option value=""></option>
+            <option value="">Pikachu</option>
+            <option value="">Pichu</option>
+        </select>
     </form>
 </body>
 
